--- a/src/client-s/css/mixins/enhancers/_fancy-pagination-menus.scss
+++ b/src/client-s/css/mixins/enhancers/_fancy-pagination-menus.scss
@@ -24,6 +24,7 @@
 
       > .icon {
         margin:               0;
+        height:               auto;
 
         &.chevron.left,
         &.angle.double.left {
